add crud for post

--- a/templates/base.html
+++ b/templates/base.html
@@ -264,16 +264,19 @@
 
 
 <body class="bg-gray-100">
+  {% include 'includes/messages.html' %}
+
+  
   {% include 'includes/header.html' %}
 
 
-  
 
-  
+
+
   {% block layout %}
-    
+
   {% endblock layout %}
-    
+
 
 </body>
 
