--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -3,33 +3,33 @@ class="md:!block col-span-full md:col-span-1 lg:mr-[20%] order-1 md:order-2"
 x-transition:enter="duration-300 ease-out" x-transition:enter-start="opacity-0 -mt-96"
 x-transition:enter-end="opacity-100 mt-0">
 <section class="card p-4">
-    <h2>Categories</h2>
+    <h2>Категории</h2>
     <ul class="hoverlist">
         <li class="highlight">
             <a href="">
                 <img class="w-8 h-8 object-cover mr-2"
                     src="https://img.icons8.com/small/96/null/landscape.png" />
-                <span class="font-bold text-sm">Landscape</span>
+                <span class="font-bold text-sm">Пейзаж</span>
             </a>
         </li>
         <li>
             <a href="">
                 <img class="w-8 h-8 object-cover mr-2"
                     src="https://img.icons8.com/small/96/null/portrait.png" />
-                <span class="font-bold text-sm">People</span>
+                <span class="font-bold text-sm">Люди</span>
             </a>
         </li>
         <li>
             <a href="">
                 <img class="w-8 h-8 object-cover mr-2" src="https://img.icons8.com/small/96/null/dog.png" />
-                <span class="font-bold text-sm">Animals</span>
+                <span class="font-bold text-sm">Животные</span>
             </a>
         </li>
         <li>
             <a href="">
                 <img class="w-8 h-8 object-cover mr-2"
                     src="https://img.icons8.com/small/96/null/180-degrees.png" />
-                <span class="font-bold text-sm">Black & White</span>
+                <span class="font-bold text-sm">Черный & Белый</span>
             </a>
         </li>
     </ul>
@@ -37,7 +37,7 @@ x-transition:enter-end="opacity-100 mt-0">
 <section class="card p-4">
     <div class="flex items-center">
         <img class="w-7 mr-2 -mt-3" src="https://img.icons8.com/ios-glyphs/90/null/fire-heart.png" />
-        <h2>Top Posts</h2>
+        <h2>Топ Посты</h2>
     </div>
     <ul class="hoverlist">
         <li>
@@ -69,7 +69,7 @@ x-transition:enter-end="opacity-100 mt-0">
 <section class="card p-4">
     <div class="flex items-center">
         <img class="w-7 mr-2 -mt-3" src="https://img.icons8.com/ios-glyphs/90/null/fire-heart.png" />
-        <h2>Top Comments</h2>
+        <h2>Топ Комментарии</h2>
     </div>
     <ul class="hoverlist">
         <li>
