--- a/templates/posts/post.html
+++ b/templates/posts/post.html
@@ -52,7 +52,7 @@
             1
           </div>
           <a href="">Лайки</a>
-          <a href="">Редактировать</a>
+          <a href="{% url 'post_edit' post.id %}">Редактировать</a>
           <a href="{% url 'post_delete'  post.id %}">Удалить</a>
         </div>
       </div>
