--- a/templates/posts/post.html
+++ b/templates/posts/post.html
@@ -22,7 +22,8 @@
     <div class="flex items-center gap-2 text-sm mb-5 flex-wrap">
 
       {% for tag in post.tags.all %}
-      <a href="" class="bg-gray-200 rounded-full px-3 py-1 hover:bg-gray-800 hover:text-white">{{ tag.name }}</a>
+      <a href="{% url 'category' tag.slug %}" class="bg-gray-200 rounded-full px-3 py-1
+      hover:bg-gray-800 hover:text-white">{{ tag.name }}</a>
       {% endfor %}
     </div>
     <div class="flex items-center justify-between text-sm px-2">
