--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -34,7 +34,7 @@
                 <a @click="dropdownOpen = !dropdownOpen" @click.away="dropdownOpen = false"
                     class="cursor-pointer select-none">
                     <img class="h-8 w-8 rounded-full object-cover"
-                        src="https://pbs.twimg.com/profile_images/508601156767997952/fFTdKUf2_400x400.jpeg" />
+                        src="{{user.profile.avatar.url}}" />
                     {{user.username}}
                     <img x-bind:class="dropdownOpen && 'rotate-180 duration-300'" class="w-4"
                         src="https://img.icons8.com/small/32/777777/expand-arrow.png" />
@@ -45,8 +45,8 @@
                     x-transition:enter-start="opacity-0 -translate-y-5 scale-90"
                     x-transition:enter-end="opacity-100 translate-y-0 scale-100">
                     <ul class="hoverlist [&>li>a]:justify-end">
-                        <li><a href="">Профиль</a></li>
-                        <li><a href="">Настроики</a></li>
+                        <li><a href="{% url 'profile' %}">Профиль</a></li>
+                        <li><a href="{% url 'profile_edit' user.profile.pk %}">Настроики</a></li>
                         <li><a href="{% url 'account_logout' %}">Выход</a></li>
                     </ul>
                 </div>
