add signals for create profile

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -46,7 +46,7 @@
                     x-transition:enter-end="opacity-100 translate-y-0 scale-100">
                     <ul class="hoverlist [&>li>a]:justify-end">
                         <li><a href="{% url 'profile' %}">Профиль</a></li>
-                        <li><a href="{% url 'profile_edit' user.profile.pk %}">Настроики</a></li>
+                        <li><a href="{% url 'profile_edit' request.user.profile.pk %}">Настроики</a></li>
                         <li><a href="{% url 'account_logout' %}">Выход</a></li>
                     </ul>
                 </div>
