--- a/templates/posts/post.html
+++ b/templates/posts/post.html
@@ -1,3 +1,4 @@
+{% load static %}
 <article class="card">
 
 
@@ -13,11 +14,16 @@
         alt="Jedi Kitty protects the street" /></a>
   </figure>
   <div class="p-4 pb-2">
-    <a class="flex items-center gap-1 mb-4" href="">
-      <img class="w-8 h-8 object-cover rounded-full" src="https://img.icons8.com/small/96/A9A9A9/happy.png" />
-      <span class="font-bold hover:underline">Lisa</span>
-      <span class="text-sm text-gray-400">@lisasimpson</span>
+
+    
+
+    <a class="flex items-center gap-1 mb-4" href="{% url 'profile'%}">
+      <img class="w-8 h-8 object-cover rounded-full" src="{{ post.author.profile.avatar.url | default:'static/img/profile.png' }}" />
+      <span class="font-bold hover:underline">{{ post.author.profile.name | default:'Нет автора' }}</span>
+      <span class="text-sm text-gray-400">@{{ post.author.username | default:'anonymous' }}</span>
     </a>
+
+
     <p class="text-5xl mb-10 px-4 font1">{{ post.body|default:'Not text' }}</p>
     <div class="flex items-center gap-2 text-sm mb-5 flex-wrap">
 
