--- a/templates/users/profile_edit.html
+++ b/templates/users/profile_edit.html
@@ -13,7 +13,7 @@
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" >Submit</button>
+    <button type="submit" >Сохранить</button>
     <a class="button secondaryAction ml-1" href="{{ request.META.HTTP_REFERER }}">Отмена</a>
 </form>
 <a class="mt-12 hover:underline text-gray-500" href="{% url 'profile_delete' profile.pk %}">Удалить профиль</a>
