--- a/templates/posts/post.html
+++ b/templates/posts/post.html
@@ -41,7 +41,7 @@
       <div class="flex items-center gap-4 [&>a:hover]:underline">
         <div class="flex items-center gap-1">
           <img class="w-5 -mt-1" src="https://img.icons8.com/small/24/000000/fire-heart.png" />
-          1
+          {{ post.likes.count|default:'0' }}
         </div>
         <a href="">Лайки</a>
 
