--- a/templates/posts/comment.html
+++ b/templates/posts/comment.html
@@ -39,7 +39,7 @@
             {% endif %}
         </a>
         <div class="flex items-center gap-4 [&>a:hover]:underline">
-
+            {% include 'snippets/likes_comment.html' %}
             {% if user.is_authenticated and comment.author == user %}
             <a href="{% url 'comment_delete' comment.id %}">Удалить</a>
             {% endif %}
