--- a/templates/posts/comment.html
+++ b/templates/posts/comment.html
@@ -1,16 +1,16 @@
 {% load static %}
 <comment class="card p-4 !mb-4">
-    <div class="flex justify-between items-center">
+    <div class="flex justify-between items-center"> 
         {% if comment.author %}
         <a class="flex items-center gap-1 mb-2" href="">
-            <img class="w-8 h-8 object-cover rounded-full" src="{{ comment.author.profile.avatar.url }}">
+            <img class="w-8 h-8 object-cover rounded-full" src="{{ comment.author.profile.avatar.url }}"> 
             <span class="font-bold hover:underline">{{ comment.author.profile.name }}</span>
             <span class="text-sm font-normal text-gray-400">@{{ comment.author.username }}</span>
         </a>
         {% else %}
         <div class="flex items-center gap-1 mb-4">
-            <img class="w-8 h-8 object-cover rounded-full" src="{% static 'images/avatar_default.svg' %}">
-            <span class="text-gray-500">Пользователь удален</span>
+            <img class="w-8 h-8 object-cover rounded-full" src="{% static 'img/avatar_default.svg' %}">
+            <span class="text-gray-500">Нет автора</span>
         </div>
         {% endif %}
     </div>
@@ -19,23 +19,20 @@
     </p>
     <div x-data="{ repliesOpen: false }" class="flex items-center justify-between flex-wrap text-sm px-2">
         <a @click="repliesOpen = !repliesOpen" class="font-bold hover:underline cursor-pointer">
-
             {% if comment.replies.count or user.is_authenticated %}
             <div class="inline-block" x-bind:class="repliesOpen && 'rotate-90 duration-300'">
-                <svg transform="rotate(90)" width="9" height="9" viewBox="0 0 25 25">
-                    <path d="M24 22h-24l12-20z" />
+                <svg transform ="rotate(90)" width="9" height="9" viewBox="0 0 25 25">
+                    <path d="M24 22h-24l12-20z"/>
                 </svg>
             </div>
             {% endif %}
             {% if comment.replies.count %}
             Ответы
-                <span id="repliescount-{{ comment.id }}" class="font-light text-gray-500 ml-1">
-                    {{comment.replies.count}}
-                </span>
+            <span id="repliescount-{{ comment.id }}" class="font-light text-gray-500 ml-1">{{ comment.replies.count }}</span>
             {% else %}
-            {% if user.is_authenticated %}
+                {% if user.is_authenticated %}
                 Ответить
-            {% endif %}
+                {% endif %}
             {% endif %}
         </a>
         <div class="flex items-center gap-4 [&>a:hover]:underline">
@@ -52,14 +49,15 @@
             {% endfor %}
 
             {% if user.is_authenticated %}
-            <form  method="post" action="{% url 'reply_sent' comment.id %}"
-            class="replyform flex justify-between mt-3" autocomplete="off" hx-post="" hx-target="this"
-                hx-swap="outerHTML">
+            <form method="post" class="replyform flex justify-between" autocomplete="off"
+            hx-post="{% url 'reply_sent' comment.id %}"
+            hx-target="this" 
+            hx-swap="outerHTML" >
                 {% csrf_token %}
                 {{ replyform }}
-                <button class="block" type="submit">Отправить</button>
+                <button class="block" type="submit">Ответить</button>
             </form>
             {% endif %}
         </div>
-    </div>
+    </div> 
 </comment>
